# AI-Healthcare-Assistant-for-Rular-Areas

./: .gitattributes  .gitignore  CHANGELOG.md  CHATBOT_PHASE_05_COMPLETE.md  CHATBOT_PHASE_05_PART_1_COMPLETE.md  CHATBOT_README.md  CHATBOT_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES_README.md  DEPLOYMENT_GUIDE.md  EMERGENCY.md  FIXES_APPLIED.md  INSTALLATION_GUIDE.md  MOBILE_FIX_SUMMARY.md  PHASE_05_COMPLETE.md  PHASE_05_FINAL_REPORT.md  PROJECT_SETUP_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  QUICK_START_SYMPTOM_CHECKER.md  README.md  README_VENV.md  RUN_APP.md  SETUP_COMPLETE.md  SYMPTOM_CHECKER_COMPLETE.md  SYMPTOM_CHECKER_EVALUATION.md  SYMPTOM_CHECKER_FILES_CREATED.md  SYMPTOM_CHECKER_FINAL_REPORT.md  SYMPTOM_CHECKER_QUICK_REF.md  SYMPTOM_CHECKER_SUCCESS.md  TODO.md  VIRTUAL_ENV_GUIDE.md  activate_venv.ps1  app.db  architecture.drawio  build_ai_index.bat  docker-compose.yml  flutter.bat  install.ps1  (+15 more)
backend/: .dockerignore  .env.example  .gitignore  COMPLETE_TESTING_GUIDE.md  Dockerfile  QUICK_START.md  README.md  SETUP_AND_TESTING.md  TESTING_GUIDE.md  alembic.ini  app.db  check_db.py  check_startup.py  check_syntax.py  docker-compose.yml  fix_category_colors.py  main.py  pyproject.toml  quick_test.ps1  requirements-dev.txt  requirements.txt  start_backend.bat  start_backend.py  start_backend.sh  start_for_mobile.ps1
backend/app/: main.py
backend/docs/: api_documentation.md  architecture.md  deployment.md  swagger.json
backend/migrations/: env.py
backend/scripts/: backup.py  create_demo_user.py  restore.py  (+2 more)
(+1203 files in other folders)
