[project]
name = "ai-healthcare-assistant-backend"
version = "1.0.0"
description = "FastAPI backend for AI Healthcare Assistant"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
